# openenclave

./: CHANGELOG.md  CMakeLists.txt
.jenkins/: Dockerfile.centos  Dockerfile.centos-ansible  Dockerfile.deploy  Jenkinsfile  build_azure_managed_images.Jenkinsfile  build_docker_images.Jenkinsfile  build_vhd.Jenkinsfile  build_vm_images.Jenkinsfile  cleanup_azure.Jenkinsfile  custom_label.Jenkinsfile  libcxx_tests.Jenkinsfile  test.ansible
.jenkins/infrastructure/: build_azure_managed_images.Jenkinsfile  build_docker_images.Jenkinsfile  e2e_testing.Jenkinsfile
.jenkins/libcxx/: Dockerfile  Jenkinsfile  hosts  ubuntu-16.04.json  ubuntu-18.04.json
.jenkins/pipelines/Agnostic/Linux/: Jenkinsfile
.jenkins/pipelines/Azure/Linux/: Jenkinsfile
.jenkins/pipelines/Azure/Nightly/: Packaging.Jenkinsfile  libcxx_tests.Jenkinsfile  nightly_packages_testing.Jenkinsfile
.jenkins/pipelines/Azure/Windows/: Jenkinsfile
.jenkins/provision/: deploy-agent.sh
.jenkins/provision/templates/oe-engine/: ubuntu-bionic.json  win-2016.json
.jenkins/provision/templates/packer/terraform/: packer-ubuntu.json  packer-win.json  ubuntu-16.04-variables.json  ubuntu-18.04-variables.json  ubuntu-nonSGX-variables.json  win-2016-variables.json  win-dcap-variables.json  win-nonSGX-variables.json
api/: globals.html
api/search/: all_9.js
cmake/: package_settings.cmake
common/: qeidentity.c  tcbinfo.c  tcbinfo.h
enclave/: qeidinfo.c
enclave/core/: CMakeLists.txt  calls.c  exception.c  hostcalls.c  hoststack.c
host/: CMakeLists.txt  create.c  elf.c  ocalls.c  report.c  sgxload.c  sgxquoteprovider.c
host/crypto/: rsa.c
host/linux/: exception.c  sgxsign.c
include/openenclave/internal/: load.h  sgxtypes.h  utils.h
pkgconfig/: CMakeLists.txt
samples/: test-samples.cmake
samples/data-sealing/: datasealing.edl
samples/file-encryptor/: fileencryptor.edl
samples/helloworld/: helloworld.edl
samples/local_attestation/: localattestation.edl
samples/remote_attestation/: remoteattestation.edl
scripts/: format-code  install-windows-prereqs.ps1
scripts/ansible/: ansible.cfg  oe-windows-acc-setup.yml  oe-windows-nonSGX-setup.yml
scripts/ansible/inventory/group_vars/: linux-agents
scripts/ansible/roles/linux/common/tasks/: apt-repo-llvm.yml
scripts/ansible/roles/linux/docker/tasks/: ci-setup-centos.yml
scripts/ansible/roles/linux/docker/vars/: core.yml
scripts/ansible/roles/linux/jenkins/tasks/: packer.yml
src/jenkins/common/: Openenclave.groovy
tests/VectorException/enc/: enc.c
tests/bigmalloc/: bigmalloc.edl
tests/create-rapid/: create_rapid.edl
tests/crypto/: crl_tests.c  tests.c
tests/crypto/enclave/: crypto.edl
tests/crypto/enclave/enc/: CMakeLists.txt  enc.c
tests/crypto/enclave/host/: host.c
tests/crypto/host/: CMakeLists.txt
tests/ecall/enc/: enc.cpp
tests/echo/: echo.edl
tests/enclaveparam/: enclaveparam.edl
tests/file/: file.edl
tests/getenclave/: getenclave.edl
tests/hexdump/: hexdump.edl
tests/hostcalls/: hostcalls.edl
tests/initializers/: initializers.edl
tests/libcxx/: tests.all  tests.broken  tests.supported  tests.unsupported
tests/mbed/: mbed.edl
tests/mbed/enc/: CMakeLists.txt
tests/memory/: memory.edl
tests/mixed_c_cpp/: mixed.edl
tests/ocall-alloc/enc/: CMakeLists.txt  enc.cpp
tests/ocall-alloc/host/: CMakeLists.txt
tests/oeedger8r/edl/: all.edl  array.edl  basic.edl  enum.edl  foreign.edl  pointer.edl  string.edl  struct.edl
tests/oeedger8r/moreedl/: bar.edl  foo.edl
tests/pingpong/: pingpong.edl
tests/print/: print.edl
tests/props/enc/: CMakeLists.txt
tests/props/host/: CMakeLists.txt  host.c
tests/report/: tests.edl
tests/safecrt/: safecrt.edl
tools/oesign/: main.c
(+5 files in other folders)
